--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<h1>Este es un sitio web con Github Pages</h1>
-<p>Fue creado con mor para el Curso de Git y Github de Platzi</p>
-<p> <img src="https://imgur.com/gallery/AWRBr8e"></p>
+<html>
+    <head>
+        <title>Mi primera pagina web</title>
+        
+    </head>
+    <body>
+        <h1>Este es un sitio web con Github Pages</h1>
+        <p>Fue creado con mor para el Curso de Git y Github de Platzi</p>
+        <p><img src="imagen/equipo.jpg" width="100%" /></p>>
+    </body>
+
+    
+
+</html>
